# SDD

./: .gitignore  CMakeLists.txt  README.md
src/lib/: CMakeLists.txt
src/lib++/: CMakeLists.txt  sdd++Config.cmake.in
src/lib++/include/sdd++/: sdd++.hpp
src/lib++/src/: sdd.cpp
src/lib/include/sdd/: sdd.h
